syntax = "proto3";

package chatbot;

import "google/api/annotations.proto";

service ChatbotService {
  rpc Chat(ChatRequest) returns (ChatResponse) {
    option (google.api.http) = {
      post: "/api/v1/chat"
      body: "*"
    };
  }
  
  rpc IndexData(IndexDataRequest) returns (IndexDataResponse);
  rpc GetChatHistory(ChatHistoryRequest) returns (ChatHistoryResponse);
}

message ChatRequest {
  string message = 1;
  string user_id = 2;
  string session_id = 3;
  repeated string context_filters = 4;
}

message ChatResponse {
  string response = 1;
  string session_id = 2;
  repeated ContextSource sources = 3;
  double confidence_score = 4;
}

message ContextSource {
  string type = 1;
  string id = 2;
  string title = 3;
  double relevance_score = 4;
}

message IndexDataRequest {
  string data_type = 1;
  bool force_reindex = 2;
}

message IndexDataResponse {
  bool success = 1;
  string message = 2;
  int32 indexed_count = 3;
}

message ChatHistoryRequest {
  string user_id = 1;
  string session_id = 2;
  int32 limit = 3;
}

message ChatHistoryResponse {
  repeated ChatMessage messages = 1;
}

message ChatMessage {
  string id = 1;
  string user_id = 2;
  string session_id = 3;
  string message = 4;
  string response = 5;
  int64 timestamp = 6;
}